HW4/javali_tests/others/new/HW3_MarLin/type_error/binary_op/OkLogicBinOp.javali
class Main {

   void main() {
      boolean b;
      b = true;
      b = b && false;
   }
}
